# blackbird

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/Modules/: FindCURL.cmake  FindOpenssl.cmake  FindPackageHandleStandardArgs.cmake  Findjansson.cmake
src/: bitcoin.cpp  check_entry_exit.cpp  check_entry_exit.h  curl_fun.cpp  main.cpp  parameters.cpp  result.cpp  time_fun.cpp  time_fun.h
src/exchange/: bitfinex.cpp  bitfinex.h  bitstamp.cpp  bitstamp.h  btce.cpp  btce.h  gemini.cpp  gemini.h  itbit.cpp  itbit.h  kraken.cpp  kraken.h  okcoin.cpp  okcoin.h  poloniex.cpp  poloniex.h
src/utils/: send_email.cpp  send_email.h
